--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -16,13 +16,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x' # Using a specific recent LTS version
+          node-version: '20.x'
 
       - name: Clear npm cache
         run: npm cache clean --force
 
       - name: Install dependencies
         run: npm install
+
+      - name: Add node_modules/.bin to PATH
+        run: echo "::add-path::./node_modules/.bin"
 
       - name: Build Nuxt.js application
         run: npx nuxt build --preset github_pages
